--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "editor.formatOnSave": true,
   "editor.bracketPairColorization.enabled": true,
   "editor.guides.bracketPairs": true,
-  "editor.guides.bracketPairsHorizontal": true
+  "editor.guides.bracketPairsHorizontal": true,
+  "editor.tabSize": 2
 }
